[package]
name = "dhat-pprof"
version = "0.1.0"
edition = "2021"
authors = ["Filip Petkovski"]
description = "Convert DHAT heap profiling data to pprof format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filippetkovski/dhat-pprof"
keywords = ["profiling", "dhat", "pprof", "heap", "performance"]
categories = ["development-tools::profiling"]

[lib]
name = "dhat_pprof"
path = "src/lib.rs"

[[bin]]
name = "dhat-pprof"
path = "src/main.rs"

[dependencies]
flate2 = "1.1.9"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
dhat = "0.3.3"
pbjson = "0.9.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[build-dependencies]
prost-build = "0.14.3"

[features]
dhat-heap = []    # if you are doing heap profiling

[[bench]]
name = "bench"
harness = false